--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
       <!-- Menu Section -->
       <div class="ps-row ps-padding-64" id="menu">
         <div class="ps-col l6 ps-padding-large">
-          <h1 class="ps-center">Nuentro Menu</h1>
+          <h1 class="ps-center">Nuestro Menu</h1>
           <br />
          
           <% for (let i = 0; i < infoProduct.length; i++) { %>
