--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,15 +49,7 @@
           <h1 class="ps-center">Nuestro Menu</h1>
           <br />
          
-          <% for (let i = 0; i < infoProduct.length; i++) { %>
-            <a href="/detalle/<%= infoProduct[i].id %>">
-                <h4><%= infoProduct[i].nombre %></h4>
-                <p class="ps-text-grey">
-                    <%= infoProduct[i].detalle %> U$S <%= infoProduct[i].precio %>
-                </p>
-                <br />
-            </a>
-        <% } %>
+          <%- include("./partials/menu-section") %>
         
 
           <h4>Risotto de Berenjena </h4>
