--- a/views/partials/menu-section.ejs
+++ b/views/partials/menu-section.ejs
@@ -1,5 +1,5 @@
 <% for (let i = 0; i < infoProduct.length; i++) { %>
-    <a href="/detalle/<%= infoProduct[i].id %>">
+    <a href="/menu/detalle/<%= infoProduct[i].id %>">
         <h4><%= infoProduct[i].nombre %></h4>
         <p class="ps-text-grey">
             <%= infoProduct[i].detalle %> U$S <%= infoProduct[i].precio %>
