--- a/views/detalleMenu.ejs
+++ b/views/detalleMenu.ejs
@@ -22,12 +22,12 @@
         </div>
 
         <div class="ps-col l6 ps-padding-large ps-img-menu">
-          <img
-            src="/images/menu.jpg"
-            class="ps-round ps-image ps-opacity-min"
-            alt="Menu"
+          <img src="<%= productoSeleccionado.imagen %>"
+               class="ps-round ps-image ps-opacity-min"
+               alt="Menu"
           />
-        </div>
+      </div>
+      
       </div>
 
 
